--- a/ripple.html
+++ b/ripple.html
@@ -158,6 +158,76 @@
     "pivotal_change": "The invention of the wheeled shopping cart allowed customers to carry more items easily.",
     "ripple_effect": "This innovation reshaped consumer habits, expanded supermarket layouts, and increased sales volume."
   },
+  {
+    "id": 6,
+    "title": "Post-it Notes",
+    "origin": "A scientist at 3M accidentally created a weak adhesive that didn’t seem useful.",
+    "pivotal_change": "A colleague used the weak glue to stick bookmarks into his hymnal without damaging pages.",
+    "ripple_effect": "This led to the creation of Post-it Notes, revolutionizing brainstorming, office productivity, and sticky reminder culture."
+  },
+  {
+    "id": 7,
+    "title": "Microwave Oven",
+    "origin": "A radar engineer noticed a chocolate bar melted in his pocket during radar testing.",
+    "pivotal_change": "He experimented with popcorn and eggs, realizing microwaves could heat food.",
+    "ripple_effect": "The microwave became a kitchen staple, reshaping food prep, diet culture, and convenience meals."
+  },
+  {
+    "id": 8,
+    "title": "The Laugh Track",
+    "origin": "Television comedies often fell flat without a live audience to cue laughs.",
+    "pivotal_change": "The invention of a 'Laff Box' allowed laugh tracks to be added to shows.",
+    "ripple_effect": "Defined sitcom pacing and emotional rhythm for decades, shaping expectations for televised humor."
+  },
+  {
+    "id": 9,
+    "title": "GPS for Everyone",
+    "origin": "GPS was originally developed by the U.S. military for navigation.",
+    "pivotal_change": "After a civilian aircraft was shot down in 1983, the system was opened to public use.",
+    "ripple_effect": "Became foundational to modern logistics, ride-sharing, personal navigation, and mobile apps."
+  },
+  {
+    "id": 10,
+    "title": "Sliced Bread",
+    "origin": "Bread was traditionally sold in whole loaves that had to be cut at home.",
+    "pivotal_change": "In 1928, a bakery adopted Otto Rohwedder’s automatic bread slicer.",
+    "ripple_effect": "Popularized convenience-focused food products, changed breakfast habits, and inspired the phrase 'best thing since...'"
+  },
+  {
+    "id": 11,
+    "title": "Velcro from Burrs",
+    "origin": "A Swiss engineer noticed burrs clinging to his dog's fur after a hike.",
+    "pivotal_change": "Under a microscope, he mimicked the tiny hooks to invent Velcro.",
+    "ripple_effect": "Widely used in fashion, aerospace, and home products, showing nature as inspiration for practical design."
+  },
+  {
+    "id": 12,
+    "title": "Bubble Wrap Beginnings",
+    "origin": "Two inventors tried to make 3D plastic wallpaper by sealing shower curtains.",
+    "pivotal_change": "Instead, they created a bubbly material that became excellent for packaging.",
+    "ripple_effect": "Spawned a new industry in protective shipping materials and ASMR popping joy."
+  },
+  {
+    "id": 13,
+    "title": "Ferris Wheel as a Rival",
+    "origin": "The U.S. wanted to outdo the Eiffel Tower for the 1893 World's Fair.",
+    "pivotal_change": "George Ferris designed a massive spinning wheel, shocking engineers of the time.",
+    "ripple_effect": "Became a global icon of fun, sparking amusement parks and engineering marvels."
+  },
+  {
+    "id": 14,
+    "title": "Mary Anderson’s Wipers",
+    "origin": "Mary Anderson noticed drivers leaning out to clear windshields manually.",
+    "pivotal_change": "She patented a hand-controlled windshield wiper in 1903.",
+    "ripple_effect": "Now essential for driving safety and comfort, influencing automotive standards worldwide."
+  },
+  {
+    "id": 15,
+    "title": "Netflix’s Late Fee Spark",
+    "origin": "Reed Hastings was charged a $40 late fee for a rented VHS.",
+    "pivotal_change": "He launched Netflix to offer DVD rentals by mail without late fees.",
+    "ripple_effect": "Pioneered streaming services and transformed the entertainment industry and media habits."
+  },
    {
     "id": 16,
     "title": "Toothpaste in a Tube",
