--- a/ripple.html
+++ b/ripple.html
@@ -286,53 +286,53 @@
   },
   {
     "id": 24,
-    "title": "Corn Flakes and Anti-Masturbation",
-    "origin": "John Harvey Kellogg invented bland corn flakes as part of a health regimen to suppress 'impure' urges.",
-    "pivotal_change": "His brother saw commercial potential and began mass-producing them as a breakfast cereal.",
-    "ripple_effect": "Created the packaged cereal industry and shaped modern breakfast culture."
-  },
-  {
-    "id": 25,
     "title": "The Yo-Yo Was a Weapon",
     "origin": "The yo-yo originated as a hunting weapon in the Philippines with sharp edges and string recoil.",
     "pivotal_change": "An American entrepreneur marketed it as a toy in the 1920s.",
     "ripple_effect": "Transformed into a global toy phenomenon and competitive skill sport."
   },
   {
-    "id": 26,
+    "id": 25,
     "title": "The Pause Button",
     "origin": "Early audio recorders didn’t have a way to temporarily stop without ending a session.",
     "pivotal_change": "Engineers added a pause function to improve usability.",
     "ripple_effect": "This small UI tweak spread to every digital interaction — from media to forms — becoming a universal affordance."
   },
   {
-    "id": 27,
+    "id": 26,
     "title": "Why Phones Say 'Hello'",
     "origin": "Alexander Graham Bell wanted people to say 'Ahoy!' when answering phones.",
     "pivotal_change": "Thomas Edison promoted 'Hello' instead — and it stuck.",
     "ripple_effect": "It normalized the use of 'hello' in everyday speech and shifted communication norms forever."
   },
   {
-    "id": 28,
+    "id": 27,
     "title": "The Happy Accident of Super Glue",
     "origin": "Cyanoacrylate was discovered while trying to create clear plastic for gun sights.",
     "pivotal_change": "Its intense bonding properties were seen as a problem — until someone realized its potential.",
     "ripple_effect": "Now used in homes, surgeries, and battlefields — one of the most versatile adhesives in history."
   },
   {
-    "id": 29,
+    "id": 28,
     "title": "Barcodes Came from Beach Sand",
     "origin": "An engineer was inspired by Morse code and lines in the sand to encode product data.",
     "pivotal_change": "He developed the barcode system, first used on a pack of Wrigley’s gum in 1974.",
     "ripple_effect": "Enabled the modern global supply chain and retail industry — from supermarkets to hospitals."
   },
   {
-    "id": 30,
+    "id": 29,
     "title": "Sunscreen from WWII",
     "origin": "Soldiers in WWII suffered severe sunburn in tropical locations.",
     "pivotal_change": "A pharmacist created a protective cream using red veterinary petroleum.",
     "ripple_effect": "Became Coppertone — launching the consumer sunscreen industry and awareness of UV protection."
   },
+{
+  "id": 30,
+  "title": "The Invention of the Zipper",
+  "origin": "Early clothing used buttons or hooks for fastening, which were time-consuming and often unreliable.",
+  "pivotal_change": "In 1913, Gideon Sundback developed the modern zipper with interlocking teeth that could be opened and closed smoothly.",
+  "ripple_effect": "The zipper became a standard in clothing, luggage, gear, and industrial applications, revolutionizing convenience in daily life and product design."
+},
   {
     "id": 31,
     "title": "The Ice Trade’s Meltdown",
@@ -367,6 +367,76 @@
     "origin": "The popularity of the bikini in postwar Europe increased skin exposure.",
     "pivotal_change": "Sales of sun protection soared alongside changing fashion norms.",
     "ripple_effect": "Spurred global skin-care industries and raised awareness of skin cancer and sun damage."
+  },
+   {
+    "id": 36,
+    "title": "The First Touchscreen Interface",
+    "origin": "Computers initially relied on keyboards and physical input devices like mice or styluses.",
+    "pivotal_change": "In 1982, the first human-friendly capacitive touchscreen was introduced at the University of Toronto.",
+    "ripple_effect": "Enabled the development of smartphones, tablets, and ATMs, fundamentally changing how humans interact with technology."
+  },
+  {
+    "id": 37,
+    "title": "The Start of Email with '@'",
+    "origin": "Early network messaging didn’t have a standard way to route messages between users on different systems.",
+    "pivotal_change": "In 1971, Ray Tomlinson chose the '@' symbol to distinguish the user from the host machine.",
+    "ripple_effect": "Became the foundation for email communication, still used globally decades later."
+  },
+  {
+    "id": 38,
+    "title": "The Origination of Wi-Fi",
+    "origin": "Astronomers studying black holes needed a way to detect faint radio waves from deep space.",
+    "pivotal_change": "In 1992, a CSIRO team in Australia accidentally developed the wireless protocol we now use.",
+    "ripple_effect": "This innovation made wireless internet possible and transformed how the world accesses information."
+  },
+  {
+    "id": 39,
+    "title": "The Pencil’s Graphite Core",
+    "origin": "People once wrote using lead styluses or ink quills, both messy and inconvenient.",
+    "pivotal_change": "A large deposit of graphite was discovered in England in the 1500s and used as a writing tool.",
+    "ripple_effect": "Led to the mass adoption of the pencil, transforming education, sketching, and note-taking."
+  },
+  {
+    "id": 40,
+    "title": "The Discovery of X-Rays",
+    "origin": "Wilhelm Röntgen was experimenting with cathode rays when he noticed a fluorescent glow from a nearby screen.",
+    "pivotal_change": "He realized invisible rays could pass through solid materials and capture images of bones.",
+    "ripple_effect": "Laid the foundation for modern medical imaging and diagnostics."
+  },
+  {
+    "id": 41,
+    "title": "The Birth of Bluetooth",
+    "origin": "Engineers wanted a way for short-range devices to communicate without cables.",
+    "pivotal_change": "In 1998, Bluetooth 1.0 was released as a unified wireless standard.",
+    "ripple_effect": "Enabled wireless headphones, smartwatches, car systems, and countless everyday conveniences."
+  },
+  {
+    "id": 42,
+    "title": "The Barcode’s First Scan",
+    "origin": "Retailers were struggling with long checkout lines and inventory errors.",
+    "pivotal_change": "In 1974, a pack of Wrigley’s gum became the first item scanned with a UPC barcode.",
+    "ripple_effect": "Transformed global retail, supply chains, and automation in commerce."
+  },
+  {
+    "id": 43,
+    "title": "The Rise of the Polaroid Camera",
+    "origin": "A little girl asked her father, Edwin Land, why she couldn’t see a photo right after it was taken.",
+    "pivotal_change": "He developed the instant camera, which printed photos minutes after capture.",
+    "ripple_effect": "Changed casual photography, paving the way for instant media culture and social photo-sharing."
+  },
+  {
+    "id": 44,
+    "title": "The Evolution of ATM Machines",
+    "origin": "Customers could only withdraw cash when banks were open.",
+    "pivotal_change": "In 1967, the world’s first ATM was installed in London using paper vouchers and PINs.",
+    "ripple_effect": "Automated banking became the norm, leading to 24/7 access and global financial connectivity."
+  },
+  {
+    "id": 45,
+    "title": "The Invention of the Stethoscope",
+    "origin": "Doctors previously had to place their ear directly on a patient’s chest to hear heartbeats.",
+    "pivotal_change": "In 1816, René Laennec rolled up paper to amplify internal sounds and avoid direct contact.",
+    "ripple_effect": "The stethoscope became a universal diagnostic tool in medicine, improving accuracy and hygiene."
   }
 ]
         let currentCardIndex = 0;
