--- a/ripple.html
+++ b/ripple.html
@@ -85,14 +85,13 @@
             font-size: 16px;
             color: #8b0000; /* Deep red */
             position: relative;
-            padding: 10px;
-            margin: 16px 32px;
+            margin: 16px 0;
             text-align: center;
             letter-spacing: 1.5px;
         }
 
         .quote-container .quote {
-          width: 90%;
+          width: 100%;
         }
 
         .question-container {
