--- a/ripple.html
+++ b/ripple.html
@@ -436,6 +436,76 @@
     "origin": "Doctors previously had to place their ear directly on a patient’s chest to hear heartbeats.",
     "pivotal_change": "In 1816, René Laennec rolled up paper to amplify internal sounds and avoid direct contact.",
     "ripple_effect": "The stethoscope became a universal diagnostic tool in medicine, improving accuracy and hygiene."
+  },
+   {
+    "id": 46,
+    "title": "The Start of Google",
+    "origin": "Search engines once ranked pages by how often a term appeared, often leading to poor results.",
+    "pivotal_change": "Google introduced PageRank, evaluating web pages based on backlink quality and quantity.",
+    "ripple_effect": "Revolutionized online search, becoming the gateway to the internet and a trillion-dollar tech empire."
+  },
+  {
+    "id": 47,
+    "title": "The Invention of Velcro",
+    "origin": "A Swiss engineer noticed burrs sticking to his dog\u2019s fur during a hike.",
+    "pivotal_change": "He examined the burrs under a microscope and replicated the hook-and-loop system.",
+    "ripple_effect": "Velcro became a staple in fashion, aerospace, and everyday product design."
+  },
+  {
+    "id": 48,
+    "title": "The Creation of Wikipedia",
+    "origin": "Encyclopedias were expensive and quickly outdated.",
+    "pivotal_change": "Jimmy Wales and Larry Sanger created a free, open-source platform for collaborative editing in 2001.",
+    "ripple_effect": "Wikipedia became the world\u2019s largest repository of knowledge, disrupting education and reference publishing."
+  },
+  {
+    "id": 49,
+    "title": "The Birth of Zoom",
+    "origin": "Video conferencing tools were clunky and inconsistent before the 2010s.",
+    "pivotal_change": "Eric Yuan created Zoom to be lightweight and scalable, launching in 2013.",
+    "ripple_effect": "It became essential during the COVID-19 pandemic, reshaping remote work, education, and digital socializing."
+  },
+  {
+    "id": 50,
+    "title": "The Rise of the Hashtag",
+    "origin": "Social media lacked a clear way to group or search for topics.",
+    "pivotal_change": "In 2007, Chris Messina proposed using the '#' symbol on Twitter to categorize conversations.",
+    "ripple_effect": "Hashtags became a universal tool for organizing content, driving social movements, and marketing trends."
+  },
+  {
+    "id": 51,
+    "title": "The Invention of Airbags",
+    "origin": "Seatbelts were the only line of defense in car crashes.",
+    "pivotal_change": "In the 1950s, engineers created air cushions that inflate on impact.",
+    "ripple_effect": "Airbags became a standard safety feature, reducing fatalities and redefining automotive design."
+  },
+  {
+    "id": 52,
+    "title": "Birth of the USB Port",
+    "origin": "Computers used multiple different ports for connecting devices, creating user frustration.",
+    "pivotal_change": "In the mid-1990s, Intel and partners introduced the Universal Serial Bus (USB) standard.",
+    "ripple_effect": "USB streamlined digital connections, enabling plug-and-play and global interoperability across devices."
+  },
+  {
+    "id": 53,
+    "title": "The First Weather Forecast",
+    "origin": "Weather was historically tracked but not publicly predicted.",
+    "pivotal_change": "In 1861, The Times in London published the first daily weather forecast using telegraph data.",
+    "ripple_effect": "Forecasting evolved into a critical service for agriculture, travel, safety, and climate science."
+  },
+  {
+    "id": 54,
+    "title": "The First Electric Traffic Light",
+    "origin": "Early intersections were chaotic and dangerous with no formal signal systems.",
+    "pivotal_change": "In 1914, Cleveland installed the first electric traffic light with red and green signals.",
+    "ripple_effect": "Enabled modern traffic management and roadway safety around the world."
+  },
+  {
+    "id": 55,
+    "title": "The Evolution of the Mouse",
+    "origin": "Early computers required typed commands, which were difficult for non-programmers.",
+    "pivotal_change": "Douglas Engelbart invented the first computer mouse in the 1960s to navigate graphical interfaces.",
+    "ripple_effect": "Changed how humans interact with computers, making them more intuitive and widely accessible."
   }
 ]
         let currentCardIndex = 0;
