--- a/ripple.html
+++ b/ripple.html
@@ -506,6 +506,321 @@
     "origin": "Early computers required typed commands, which were difficult for non-programmers.",
     "pivotal_change": "Douglas Engelbart invented the first computer mouse in the 1960s to navigate graphical interfaces.",
     "ripple_effect": "Changed how humans interact with computers, making them more intuitive and widely accessible."
+  },
+    {
+    "id": 56,
+    "title": "The Invention of the Pencil Eraser",
+    "origin": "People used bread or rubber blocks to erase pencil marks, usually as a separate item.",
+    "pivotal_change": "In 1858, Hymen Lipman patented a pencil with an eraser attached to the end.",
+    "ripple_effect": "It simplified writing and corrections, becoming a global standard in education and office tools."
+  },
+  {
+    "id": 57,
+    "title": "The Rise of Contactless Payment",
+    "origin": "Traditional card swiping required physical contact and signature or PIN entry.",
+    "pivotal_change": "RFID and NFC tech enabled secure wireless transactions with just a tap.",
+    "ripple_effect": "Streamlined retail checkout, encouraged mobile wallets, and enabled frictionless commerce."
+  },
+  {
+    "id": 58,
+    "title": "The Evolution of the Paperclip",
+    "origin": "Loose papers were once tied with string or fastened using pins.",
+    "pivotal_change": "In the late 1800s, the Gem paperclip design was introduced as a reusable wire loop.",
+    "ripple_effect": "Became an everyday item for organizing documents, symbolizing simplicity in office culture."
+  },
+  {
+    "id": 59,
+    "title": "The Creation of the CTRL+Z Shortcut",
+    "origin": "Correcting mistakes on early computers required redoing entire steps manually.",
+    "pivotal_change": "Developers introduced an 'undo' function with a quick keyboard shortcut: Ctrl+Z.",
+    "ripple_effect": "Enabled creative risk-taking in digital tools and became an expected feature across software."
+  },
+  {
+    "id": 60,
+    "title": "The First Subway System",
+    "origin": "Above-ground transport in cities was overcrowded and slowed by traffic.",
+    "pivotal_change": "London opened the world's first underground railway in 1863.",
+    "ripple_effect": "Transformed urban planning, enabled faster city growth, and inspired transit systems worldwide."
+  },
+  {
+    "id": 61,
+    "title": "The Traffic Roundabout",
+    "origin": "Intersections with multiple roads were congested and prone to collisions.",
+    "pivotal_change": "Engineers developed circular intersections to keep traffic flowing continuously.",
+    "ripple_effect": "Adopted globally for efficiency and safety, reducing stop-and-go driving and emissions."
+  },
+  {
+    "id": 62,
+    "title": "The Recycling Triangle Symbol",
+    "origin": "Early recycling initiatives lacked a recognizable standard or brand.",
+    "pivotal_change": "The Mobius loop symbol was created in 1970 for a design contest during Earth Day.",
+    "ripple_effect": "It became an international icon for sustainability, sparking awareness and environmental action."
+  },
+  {
+    "id": 63,
+    "title": "The Development of the Sticky Label",
+    "origin": "Labels once required glue or moistening to stick to surfaces.",
+    "pivotal_change": "Pressure-sensitive adhesives enabled peel-and-stick labels in the 1930s.",
+    "ripple_effect": "Revolutionized product packaging, shipping, and office supplies with convenience and speed."
+  },
+  {
+    "id": 64,
+    "title": "The Launch of the Stopwatch Feature",
+    "origin": "Standard clocks couldn\u2019t track short bursts of time for sports or experiments.",
+    "pivotal_change": "The stopwatch allowed start/stop timing with precision on demand.",
+    "ripple_effect": "Became a key tool in sports, science, and productivity measurement worldwide."
+  },
+  {
+    "id": 65,
+    "title": "The Rollable Paint Roller",
+    "origin": "Walls were painted with brushes, requiring time and multiple coats.",
+    "pivotal_change": "In the 1940s, the paint roller was invented to evenly apply paint over large surfaces.",
+    "ripple_effect": "Improved DIY painting, made home renovation accessible, and sped up commercial work."
+  },
+  {
+    "id": 66,
+    "title": "The Invention of the Ziploc Bag",
+    "origin": "Food and items needed airtight sealing, but reusable solutions were limited.",
+    "pivotal_change": "In the 1960s, Ziploc introduced a resealable plastic bag with interlocking grooves.",
+    "ripple_effect": "Changed food storage, packing, and organization for households and businesses globally."
+  },
+  {
+    "id": 67,
+    "title": "The Rise of Keyboard Shortcuts",
+    "origin": "Users depended heavily on menus and mouse clicks to perform frequent actions.",
+    "pivotal_change": "Software designers implemented shortcuts like Ctrl+C and Ctrl+V.",
+    "ripple_effect": "Boosted digital productivity and became essential muscle memory for billions of users."
+  },
+  {
+    "id": 68,
+    "title": "The Evolution of Push Notifications",
+    "origin": "Mobile apps initially required users to manually check for updates or messages.",
+    "pivotal_change": "Push notifications allowed real-time updates directly to users\u2019 devices.",
+    "ripple_effect": "Transformed mobile engagement and attention economics, influencing how people interact with apps."
+  },
+  {
+    "id": 69,
+    "title": "The Pencil with a Clip",
+    "origin": "Pencils easily rolled off desks or were misplaced without a fixed storage method.",
+    "pivotal_change": "Attaching a clip to pencils and pens allowed them to stay secure in pockets or notebooks.",
+    "ripple_effect": "A tiny accessory that became standard in education, office, and professional environments."
+  },
+  {
+    "id": 70,
+    "title": "The Introduction of the Speed Bump",
+    "origin": "Communities struggled with drivers speeding through residential streets.",
+    "pivotal_change": "Speed bumps were introduced to physically slow down traffic.",
+    "ripple_effect": "Widespread use in urban design for safety, influencing driver behavior with passive infrastructure."
+  },
+  {
+    "id": 71,
+    "title": "The Microphone Windshield (Pop Filter)",
+    "origin": "Recording and broadcasting often suffered from distracting plosive sounds.",
+    "pivotal_change": "Adding a simple mesh or foam over the mic reduced popping noises.",
+    "ripple_effect": "Enhanced clarity in audio recording, now standard in podcasts, music, and broadcasting."
+  },
+  {
+    "id": 72,
+    "title": "The Concept of Bookmarks in Browsers",
+    "origin": "Early internet users had to manually type or write down URLs to return to websites.",
+    "pivotal_change": "Browser bookmarks allowed users to save and access their favorite sites quickly.",
+    "ripple_effect": "Changed how people navigated the web and organized their digital knowledge."
+  },
+  {
+    "id": 73,
+    "title": "The Reinvention of Alarm Clocks with Snooze",
+    "origin": "Traditional alarm clocks only offered a single alert to wake users up.",
+    "pivotal_change": "The snooze button gave users the ability to delay waking by a few minutes.",
+    "ripple_effect": "Changed morning routines and human behavior around sleep cycles and procrastination."
+  },
+  {
+    "id": 74,
+    "title": "The Standardization of USB Charging",
+    "origin": "Gadgets came with proprietary, incompatible chargers, creating confusion and waste.",
+    "pivotal_change": "Widespread adoption of USB standards created universal charging ports.",
+    "ripple_effect": "Simplified device interoperability, reduced e-waste, and enabled global tech standardization."
+  },
+  {
+    "id": 75,
+    "title": "The 'Are You Sure?' Confirmation Prompt",
+    "origin": "Early digital actions were sometimes irreversible due to accidental clicks.",
+    "pivotal_change": "Adding confirmation prompts gave users a chance to reconsider actions.",
+    "ripple_effect": "Became a universal safety feature in UI design, reducing errors and enhancing user trust."
+  },
+   {
+    "id": 76,
+    "title": "The Invention of the Twist-Off Bottle Cap",
+    "origin": "Opening bottles required separate tools like corkscrews or bottle openers.",
+    "pivotal_change": "The twist-off cap allowed bottles to be opened by hand.",
+    "ripple_effect": "Improved convenience led to widespread adoption in beverages and pharmaceuticals."
+  },
+  {
+    "id": 77,
+    "title": "The Universal Recycling Bin Color",
+    "origin": "Recycling efforts were hampered by inconsistent bin labeling.",
+    "pivotal_change": "Cities and organizations adopted blue as a standard color for recycling bins.",
+    "ripple_effect": "Boosted participation and awareness in recycling programs worldwide."
+  },
+  {
+    "id": 78,
+    "title": "The Auto-Save Feature in Software",
+    "origin": "Losing unsaved work due to crashes was a common frustration.",
+    "pivotal_change": "Developers introduced auto-save functionality to preserve user progress automatically.",
+    "ripple_effect": "Increased user confidence and productivity across creative and professional tools."
+  },
+  {
+    "id": 79,
+    "title": "The Use of Rubber Ducks in Testing",
+    "origin": "Programmers struggled to find bugs in their own code.",
+    "pivotal_change": "A technique called rubber duck debugging involved explaining code aloud to a rubber duck.",
+    "ripple_effect": "Popularized a simple yet effective method of self-review and problem-solving in software engineering."
+  },
+  {
+    "id": 80,
+    "title": "The Origin of Mute Buttons",
+    "origin": "Radios and TVs offered only volume control but no way to silence sound instantly.",
+    "pivotal_change": "The addition of a mute button gave users immediate control over audio interruptions.",
+    "ripple_effect": "Now standard on remotes, devices, and conference calls - key for privacy and etiquette."
+  },
+  {
+    "id": 81,
+    "title": "The Wristwatch Shift",
+    "origin": "Pocket watches were the norm until World War I soldiers needed quick access to time.",
+    "pivotal_change": "Strapping watches to wrists proved more practical in combat.",
+    "ripple_effect": "Made wristwatches fashionable, mainstream, and eventually digitized for fitness and smart features."
+  },
+  {
+    "id": 82,
+    "title": "The Voice Mail System",
+    "origin": "Missed calls once meant lost communication with no record.",
+    "pivotal_change": "The introduction of voicemail allowed callers to leave recorded messages.",
+    "ripple_effect": "Changed business communication, customer service, and personal availability expectations."
+  },
+  {
+    "id": 83,
+    "title": "The Invention of Dry-Erase Boards",
+    "origin": "Chalkboards caused dust and required regular cleaning.",
+    "pivotal_change": "In the 1960s, dry-erase whiteboards offered dust-free, reusable writing surfaces.",
+    "ripple_effect": "Became a staple in classrooms, offices, and homes - promoting clean, collaborative workspaces."
+  },
+  {
+    "id": 84,
+    "title": "The Birth of the Cursor Blink",
+    "origin": "Early text entry systems lacked visual cues about where input would appear.",
+    "pivotal_change": "Adding a blinking cursor helped users track text entry in real-time.",
+    "ripple_effect": "A foundational part of digital interfaces, aiding usability across all writing software."
+  },
+  {
+    "id": 85,
+    "title": "The First Digital Spell Checker",
+    "origin": "Typing errors in documents required manual proofreading and corrections.",
+    "pivotal_change": "Spell checkers flagged typos as users typed.",
+    "ripple_effect": "Became essential in word processing, boosting written accuracy and confidence for users worldwide."
+  },
+  {
+    "id": 86,
+    "title": "The Push to Walk Button",
+    "origin": "Pedestrian crossings initially lacked interaction, leading to long wait times or unsafe crossings.",
+    "pivotal_change": "Push-to-walk buttons allowed people to request safe crossing windows.",
+    "ripple_effect": "Improved pedestrian flow and safety in urban areas, influencing smart city design."
+  },
+  {
+    "id": 87,
+    "title": "The Zip File Format",
+    "origin": "Transferring or storing large files was slow and space-consuming.",
+    "pivotal_change": "The ZIP format compressed data into smaller, shareable packages.",
+    "ripple_effect": "Transformed file sharing, software distribution, and storage efficiency."
+  },
+  {
+    "id": 88,
+    "title": "The Notification Dot",
+    "origin": "Apps needed a subtle way to signal updates without interrupting users.",
+    "pivotal_change": "The small red badge with a number became the standard attention cue.",
+    "ripple_effect": "Became a powerful tool in UX design, changing how users prioritize attention and action."
+  },
+  {
+    "id": 89,
+    "title": "The 'Skip Intro' Button",
+    "origin": "Streaming viewers often wanted to bypass repetitive opening sequences.",
+    "pivotal_change": "Netflix introduced the 'Skip Intro' feature based on viewer behavior data.",
+    "ripple_effect": "Changed how shows are watched, encouraging binge-viewing and interface personalization."
+  },
+  {
+    "id": 90,
+    "title": "The Electric Kettle",
+    "origin": "Boiling water on the stove required time and attention.",
+    "pivotal_change": "Electric kettles automated the heating process with built-in shut-off systems.",
+    "ripple_effect": "Made tea, coffee, and quick meals more convenient, becoming a kitchen staple globally."
+  },
+  {
+    "id": 91,
+    "title": "The Toggle Switch",
+    "origin": "Electrical circuits were once controlled by cumbersome levers or manual plugs.",
+    "pivotal_change": "Toggle switches offered quick on/off control with a single motion.",
+    "ripple_effect": "Simplified user interaction across everything from lighting to electronics to aircraft controls."
+  },
+  {
+    "id": 92,
+    "title": "The Sticky Note Reminder",
+    "origin": "People relied on notebooks or memory to keep track of small tasks.",
+    "pivotal_change": "Post-it Notes offered visible, temporary notes that stuck where they were needed.",
+    "ripple_effect": "Changed task management, brainstorming, and communication in homes and workplaces."
+  },
+  {
+    "id": 93,
+    "title": "The First QR Menu",
+    "origin": "Restaurants needed contactless solutions during the COVID-19 pandemic.",
+    "pivotal_change": "Many switched to QR codes for menu access via mobile devices.",
+    "ripple_effect": "Normalized contactless interaction in dining, retail, and events, accelerating digital adoption."
+  },
+  {
+    "id": 94,
+    "title": "The Tamper-Evident Seal",
+    "origin": "Product tampering incidents in the 1980s eroded consumer trust.",
+    "pivotal_change": "Manufacturers adopted seals to show if packaging had been opened.",
+    "ripple_effect": "Became a safety standard across food, medicine, and cosmetics industries."
+  },
+  {
+    "id": 95,
+    "title": "The Red 'Record' Button",
+    "origin": "Early recording systems lacked clear indicators for capturing media.",
+    "pivotal_change": "The universal red button became the symbol for starting a recording.",
+    "ripple_effect": "Simplified media creation and contributed to the rise of user-generated content."
+  },
+  {
+    "id": 96,
+    "title": "The Toggle Dark Mode",
+    "origin": "Bright screens caused eye strain and battery drain.",
+    "pivotal_change": "OS designers introduced dark mode as an accessibility and aesthetic option.",
+    "ripple_effect": "Adopted widely across apps and systems, influencing modern UI design and user preference."
+  },
+  {
+    "id": 97,
+    "title": "The Digital Comment Section",
+    "origin": "Printed media offered no real-time feedback or discussion.",
+    "pivotal_change": "Web platforms allowed readers to publicly respond to content.",
+    "ripple_effect": "Transformed publishing into two-way dialogue, influencing media, politics, and online discourse."
+  },
+  {
+    "id": 98,
+    "title": "The Laptop Trackpad",
+    "origin": "Portable computers originally required external mice for navigation.",
+    "pivotal_change": "Built-in trackpads replaced the need for external input devices.",
+    "ripple_effect": "Enabled more compact, mobile-friendly laptops and redefined user interaction on the go."
+  },
+  {
+    "id": 99,
+    "title": "The Use of Status Indicators",
+    "origin": "Users had no way to indicate their availability online.",
+    "pivotal_change": "Status labels like 'Away' or 'Do Not Disturb' were added to chat apps.",
+    "ripple_effect": "Improved digital etiquette and expectations for communication in work and personal messaging."
+  },
+  {
+    "id": 100,
+    "title": "The Caps Lock Key",
+    "origin": "Typing in all capital letters required holding the shift key continuously.",
+    "pivotal_change": "The caps lock key allowed toggling uppercase mode with a single press.",
+    "ripple_effect": "Became a universal function key \u2014 useful, infamous, and part of keyboard lore."
   }
 ]
         let currentCardIndex = 0;
