--- a/frame.html
+++ b/frame.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Innovation by Example</title>
+    <title>Frame Game</title>
     <style>
         body {
             font-family: "Arial", Times, serif;
