--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
   <br/>
   <br/>
   <a href="ripple.html">The Ripple Effect</a>
+  <br/>
+  <br/>
+  <a href="frame.html">The Frame Game</a>
 </body>
 </html>
