--- a/frame.html
+++ b/frame.html
@@ -646,6 +646,181 @@
     "frame_prompt": "Assume people won't remember most of it.",
     "trigger_question": "What's the one thing that must stick?",
     "use_case": "Helpful for messaging, campaigns, and education."
+  },
+              {
+    "id": 76,
+    "title": "Hide the Tool",
+    "frame_prompt": "Imagine the interface or mechanism is invisible.",
+    "trigger_question": "What would this look like if the tech disappeared into the background?",
+    "use_case": "Ideal for designing seamless, friction-free experiences."
+  },
+  {
+    "id": 77,
+    "title": "Flip the Reward",
+    "frame_prompt": "Change what gets rewarded or recognized.",
+    "trigger_question": "What if we rewarded effort instead of results - or questions instead of answers?",
+    "use_case": "Useful for culture design and motivational systems."
+  },
+  {
+    "id": 78,
+    "title": "What Would Grandma Say?",
+    "frame_prompt": "Imagine explaining this idea to someone from another generation.",
+    "trigger_question": "Would it seem respectful, valuable, or completely absurd?",
+    "use_case": "Helps with ethical reflection, clarity, and intergenerational design."
+  },
+  {
+    "id": 79,
+    "title": "Red Button Test",
+    "frame_prompt": "Ask: if there were a red button to kill this, who would press it - and why?",
+    "trigger_question": "What reasons might someone have to stop this from happening?",
+    "use_case": "Uncovers unspoken objections, blockers, and resistance."
+  },
+  {
+    "id": 80,
+    "title": "Make It Ritual",
+    "frame_prompt": "Turn a mundane task into a meaningful moment.",
+    "trigger_question": "How could this process feel more like a practice or ceremony?",
+    "use_case": "Great for employee experience, transitions, and culture-building."
+  },
+  {
+    "id": 81,
+    "title": "Add a Pause",
+    "frame_prompt": "Design for intentional moments of reflection.",
+    "trigger_question": "Where should we give people space to consider or breathe?",
+    "use_case": "Helpful for form design, decision-making flows, or emotional pacing."
+  },
+  {
+    "id": 82,
+    "title": "The First 10 Seconds",
+    "frame_prompt": "Focus only on the start of the experience.",
+    "trigger_question": "What does someone see, hear, or feel immediately?",
+    "use_case": "Key for onboarding, first impressions, and product hooks."
+  },
+  {
+    "id": 83,
+    "title": "The Last Mile",
+    "frame_prompt": "Zoom in on delivery, handoff, or implementation.",
+    "trigger_question": "Where does this fall apart between design and reality?",
+    "use_case": "Useful for operations, execution, and product/market fit."
+  },
+  {
+    "id": 84,
+    "title": "Design for Boredom",
+    "frame_prompt": "Assume your users are tired or distracted.",
+    "trigger_question": "What would survive low attention or low energy?",
+    "use_case": "Helpful for communication, learning, or multitasking environments."
+  },
+  {
+    "id": 85,
+    "title": "Unbundle It",
+    "frame_prompt": "Break the idea into smaller independent parts.",
+    "trigger_question": "What if each piece stood alone\u2014what would we still keep?",
+    "use_case": "Useful for modular product thinking, pricing models, and strategy."
+  },
+  {
+    "id": 86,
+    "title": "Reverse Engineer Success",
+    "frame_prompt": "Start with a known success and work backwards.",
+    "trigger_question": "What decisions or steps led to that outcome?",
+    "use_case": "Ideal for case studies, replication strategy, and reverse mapping."
+  },
+  {
+    "id": 87,
+    "title": "If It Were Art",
+    "frame_prompt": "View your idea as an artistic expression.",
+    "trigger_question": "Is this more like a poem, a sculpture, or a performance?",
+    "use_case": "Good for creative teams, storytelling, or emotional framing."
+  },
+  {
+    "id": 88,
+    "title": "The Permission Reversal",
+    "frame_prompt": "Assume you don't need permission - only clarity.",
+    "trigger_question": "If no one could say no, what would you try?",
+    "use_case": "Unlocks bolder thinking and tests limiting beliefs."
+  },
+  {
+    "id": 89,
+    "title": "Translate Across Cultures",
+    "frame_prompt": "Reframe for a different language or cultural context.",
+    "trigger_question": "What might be misunderstood - or work better - in another part of the world?",
+    "use_case": "Essential for global design, DEI, and cross-border strategy."
+  },
+  {
+    "id": 90,
+    "title": "Delay the Gratification",
+    "frame_prompt": "Design for long-term benefit over short-term reward.",
+    "trigger_question": "What would make this valuable a year from now, not just today?",
+    "use_case": "Useful in behavior design, sustainability, and product loyalty."
+  },
+  {
+    "id": 91,
+    "title": "If It Were a Game Show",
+    "frame_prompt": "Imagine the idea pitched for entertainment.",
+    "trigger_question": "What's the challenge? The tension? The win condition?",
+    "use_case": "Great for pitching, audience engagement, and interactive experiences."
+  },
+  {
+    "id": 92,
+    "title": "Design for One",
+    "frame_prompt": "Forget scalability - just serve one person exceptionally well.",
+    "trigger_question": "What does a perfect experience look like for one real user?",
+    "use_case": "Great for prototyping, onboarding, and crafting high-touch interactions."
+  },
+  {
+    "id": 93,
+    "title": "Change the Reward Loop",
+    "frame_prompt": "Modify the trigger/action/reward cycle.",
+    "trigger_question": "What do users expect after this step - and what if we flipped it?",
+    "use_case": "Helps rewire behavior patterns in products or services."
+  },
+  {
+    "id": 94,
+    "title": "The Invisible Hand",
+    "frame_prompt": "Spot external pressures that shape decisions invisibly.",
+    "trigger_question": "What cultural or market forces are guiding this more than we admit?",
+    "use_case": "Useful for strategic alignment and future-proofing."
+  },
+  {
+    "id": 95,
+    "title": "Slow It Down",
+    "frame_prompt": "What if we intentionally made this take more time?",
+    "trigger_question": "Would slowing the pace add meaning, depth, or trust?",
+    "use_case": "Perfect for ethics, luxury, learning, and interpersonal design."
+  },
+  {
+    "id": 96,
+    "title": "Let It Be Ugly First",
+    "frame_prompt": "Remove the pressure for polish early on.",
+    "trigger_question": "What would a rough, working version of this look like?",
+    "use_case": "Fosters experimentation, drafts, and idea testing."
+  },
+  {
+    "id": 97,
+    "title": "Design for Disagreement",
+    "frame_prompt": "Assume this will be debated or opposed.",
+    "trigger_question": "How can we honor dissent while still moving forward?",
+    "use_case": "Powerful for collaboration, strategy, and change management."
+  },
+  {
+    "id": 98,
+    "title": "The Quiet Launch",
+    "frame_prompt": "Release without fanfare and observe.",
+    "trigger_question": "What happens when you launch it quietly and let it speak for itself?",
+    "use_case": "Good for lean testing, feedback loops, and stealth initiatives."
+  },
+  {
+    "id": 99,
+    "title": "Use It Backwards",
+    "frame_prompt": "Repurpose the tool for something it wasn\u2019t meant for.",
+    "trigger_question": "What happens if we flip the function, channel, or user role?",
+    "use_case": "Unlocks hacks, side uses, and creative applications."
+  },
+  {
+    "id": 100,
+    "title": "The Museum Test",
+    "frame_prompt": "Imagine this is part of a museum exhibit in 50 years.",
+    "trigger_question": "What would people say about the impact it had?",
+    "use_case": "Great for legacy thinking, ethics, and long-view strategy."
   }
         ]
         let currentCardIndex = 0;
