--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
   <br/>
   <br/>
   <a href="frame.html">The Frame Game</a>
+  <br/>
+  <br/>
+  <a href="dark_psychology.html">Dark Psychology</a>
 </body>
 </html>
