--- a/dark_psychology.html
+++ b/dark_psychology.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frame Game</title>
+    <title>Dark Psychology</title>
     <style>
         body {
             font-family: "Arial", Times, serif;
