--- a/dark_psychology.html
+++ b/dark_psychology.html
@@ -201,6 +201,86 @@
     "real_life_example": "'Just $3/day' instead of '$90/month'; or 'cancel anytime' as a benefit.",
     "psychology_trigger": "Framing effect",
     "business_use_case": "Reword pricing and policies to reduce perceived risk and increase attractiveness."
+  },
+   {
+    "id": 11,
+    "title": "The Authority Mirage",
+    "concept": "Use symbols or language of authority to gain instant trust.",
+    "real_life_example": "Websites using fake doctor badges or security seals to boost credibility.",
+    "psychology_trigger": "Obedience to authority",
+    "business_use_case": "Use language like 'certified', 'approved', or design elements that evoke trust (badges, uniforms, blue tones)."
+  },
+  {
+    "id": 12,
+    "title": "Fear of the Unknown",
+    "concept": "Introduce uncertainty or vague risks to push protective action.",
+    "real_life_example": "“Your identity may be at risk!” popups on antivirus websites.",
+    "psychology_trigger": "Fear priming",
+    "business_use_case": "Use soft warnings (e.g. ‘Don’t miss your renewal!’) to increase urgency and lock-in behavior."
+  },
+  {
+    "id": 13,
+    "title": "The Trap of Freemium",
+    "concept": "Offer just enough for free to create dependency, then gate essential features.",
+    "real_life_example": "Design tools that allow creating, but charge to export or remove watermark.",
+    "psychology_trigger": "Commitment + loss aversion",
+    "business_use_case": "Design your freemium model to create usage habits, then charge to remove limits."
+  },
+  {
+    "id": 14,
+    "title": "False Choice Control",
+    "concept": "Offer two or three options where all outcomes benefit you.",
+    "real_life_example": "“Do you want to sign up for the weekly plan or monthly?” — no option to say no.",
+    "psychology_trigger": "Perceived autonomy",
+    "business_use_case": "Present choices that guide the user to your goal while making them feel in control."
+  },
+  {
+    "id": 15,
+    "title": "Reputation Leverage",
+    "concept": "Use public-facing reviews or scores to pressure conformity.",
+    "real_life_example": "eBay feedback systems or Uber’s passenger rating — “Be good or be punished.”",
+    "psychology_trigger": "Social accountability",
+    "business_use_case": "Use peer-reviewed ratings to enforce good behavior or upsell based on reputation perks."
+  },
+  {
+    "id": 16,
+    "title": "Illusion of Transparency",
+    "concept": "Claim radical transparency while selectively disclosing info to gain trust.",
+    "real_life_example": "Some startups share salaries publicly, but hide ownership or growth issues.",
+    "psychology_trigger": "Transparency bias",
+    "business_use_case": "Share curated data dashboards or revenue milestones to build hype and investor trust."
+  },
+  {
+    "id": 17,
+    "title": "The Countdown Cage",
+    "concept": "Use ticking timers to artificially limit availability or action time.",
+    "real_life_example": "Course landing pages with 5-minute expiring bonuses that reset on refresh.",
+    "psychology_trigger": "Temporal scarcity",
+    "business_use_case": "Use JavaScript countdowns in cart abandonment emails or flash sales to boost FOMO purchases."
+  },
+  {
+    "id": 18,
+    "title": "Authority by Association",
+    "concept": "Mention clients, platforms, or events that suggest credibility—even if loosely related.",
+    "real_life_example": "“As seen on Forbes” from a single unpaid blog mention.",
+    "psychology_trigger": "Halo effect",
+    "business_use_case": "Leverage any press, affiliation, or partner to boost your brand’s persuasive power."
+  },
+  {
+    "id": 19,
+    "title": "The Choice-Reward Loop",
+    "concept": "Let users make a choice, then reward them immediately to reinforce action.",
+    "real_life_example": "“Choose your mystery discount!” and reveal a coupon instantly.",
+    "psychology_trigger": "Operant conditioning",
+    "business_use_case": "Create mini-games or reward spinners to increase engagement and click-through rates."
+  },
+  {
+    "id": 20,
+    "title": "Overchoice Paralysis",
+    "concept": "Give users too many options so they default to your preferred one.",
+    "real_life_example": "Streaming platforms showcasing hundreds of titles while autoplay selects the default.",
+    "psychology_trigger": "Analysis paralysis",
+    "business_use_case": "Present many choices but highlight or preselect your most profitable or intended path."
   }
 ]
 
